# Resonance-folding

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  resonance_folding_additional_runs.py  rf_saas_app.py  webui_merger.py
.github/: FUNDING.yml
docs/: PAPER_DRAFT.md
experiments/: resonance_folding_benchmark.py  resonance_folding_close_claim.py  resonance_folding_continual.py  resonance_folding_full_octconv.py  resonance_folding_scale_diverge.py  resonance_folding_slerp_v2.py  resonance_folding_vision_merge.py
resonance_folding/: __init__.py  algebra.py  arch.py  cli.py  fold.py  merge.py
tests/: test_core.py
