[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "resonance-folding"
version     = "0.1.0"
description = "Octonion weight representation and geodesic model merging for native 8-channel convolutional networks"
readme      = "README.md"
license     = {text = "Apache-2.0"}
authors     = [{name = "Daniel Frokido"}]
keywords    = [
    "octonion", "neural-network", "model-merging", "weight-interpolation",
    "slerp", "hypercomplex", "deep-learning", "pytorch"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies    = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
benchmark = [
    "torchvision>=0.15.0",
]

[project.scripts]
rf-merge = "resonance_folding.cli:main"

[project.urls]
Homepage   = "https://github.com/danielfrokido/resonance-folding"
Repository = "https://github.com/danielfrokido/resonance-folding"

[tool.setuptools.packages.find]
where = ["."]
include = ["resonance_folding*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
